antlr-out/evolang_parser.go
// Code generated from ./EvoLangParser.g4 by ANTLR 4.13.0. DO NOT EDIT.

package parser // EvoLangParser

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type EvoLangParser struct {
	*antlr.BaseParser
}

var EvoLangParserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func evolangparserParserInit() {
	staticData := &EvoLangParserParserStaticData
	staticData.LiteralNames = []string{
		"", "'model'", "'events'", "'enum'", "'@references'", "'@linkedBy'",
		"'body'", "'authenticate'", "'return'", "'Int'", "'String'", "'Boolean'",
		"'if'", "'main'", "'print'", "'Listen'", "'query'", "'rule'", "'mutation'",
		"'input'", "'Function'", "'Middleware'", "'Input'", "'*'", "'/'", "'+'",
		"'-'", "'>'", "'<'", "'=='", "'!='", "'>='", "'<='", "'&&'", "'||'",
		"'in'", "'='", "'define'", "'lang'", "", "", "", "", "", "", "", "'{'",
		"'}'", "'['", "']'", "'('", "')'", "':'", "'#'", "'.'", "','", "'@'",
		"'|'", "'[sandbox'", "'[/sandbox]'",
	}
	staticData.SymbolicNames = []string{
		"", "MODEL_DEF", "EVENTS_DEF", "ENUM_DEF", "REFERENCES_DEF", "LINKED_BY_DEF",
		"BODY_DEF", "AUTHENTICATE_DEF", "RETURN_DEF", "TYPE_INT_DEF", "TYPE_STRING_DEF",
		"TYPE_BOOLEAN_DEF", "IF_DEF", "MAIN_DEF", "PRINT_DEF", "LISTEN_DEF",
		"QUERY_DEF", "RULE_DEF", "MUTATION_DEF", "INPUT_DEF", "OPERATION_FUNCTION_DEF",
		"OPERATION_MIDDLEWARE_DEF", "OPERATION_INPUT_DEF", "OP_MUL", "OP_DIV",
		"OP_SUM", "OP_SUB", "OP_GT", "OP_LT", "OP_EQEQ", "OP_NEQ", "OP_GTEQ",
		"OP_LTEQ", "OP_AND", "OP_OR", "OP_IN", "OP_ASSIGN", "DEFINE_DEF", "LANG_DEF",
		"ID", "STRING", "INT", "BOOLEAN", "WS", "COMMENT", "WHITESPACE", "OPEN_BRACKET",
		"CLOSE_BRACKET", "OPEN_S_BRACKET", "CLOSE_S_BRACKET", "OPEN_PAREN",
		"CLOSE_PAREN", "COLON", "HASH", "DOT", "COMMA", "AT", "PIPE", "OPEN_SANDBOX_MODE",
		"CLOSE_SANDBOX_MODE", "SANDBOX", "SANDBOX_CONTENT",
	}
	staticData.RuleNames = []string{
		"prog", "statement", "modelDef", "modelBody", "modelFieldDef", "ruleDef",
		"ruleBody", "ruleStatement", "ruleParameters", "functionBody", "assignmentStatement",
		"conditionalStatement", "condition", "returnStatement", "ruleConditionExpression",
		"equalityExpression", "inExpression", "ruleExpressionPrimary", "mutationDef",
		"mutationBody", "mutationStatement", "mutationParameters", "mutationInnerBlock",
		"middlewareBlock", "functionBlock", "inputDef", "inputBody", "inputFieldDef",
		"eventDef", "eventChannelHandler", "enumDef", "references", "linkedBy",
		"action", "paramList", "bodyDef", "authenticateDef", "returnDef", "typeDef",
		"arrayDef", "eventType", "expression", "methodCallExpression", "primaryExpression",
		"propertyAccess", "functionCall", "exprList", "mainFunction", "mainStatements",
		"mainStatement", "printStatement", "serverStatement", "sandboxBlock",
		"sandboxAttributes", "sandboxAttribute", "sandboxLangAttribute", "sandboxDefineAttribute",
		"sandboxDefineContent",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// EvoLangParserInit initializes any static state used to implement EvoLangParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewEvoLangParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func EvoLangParserInit() {
	staticData := &EvoLangParserParserStaticData
	staticData.once.Do(evolangparserParserInit)
}

// NewEvoLangParser produces a new parser instance for the optional input antlr.TokenStream.
func NewEvoLangParser(input antlr.TokenStream) *EvoLangParser {
	EvoLangParserInit()
	this := new(EvoLangParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &EvoLangParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "EvoLangParser.g4"

	return this
}

// EvoLangParser tokens.
const (
	EvoLangParserEOF                      = antlr.TokenEOF
	EvoLangParserMODEL_DEF                = 1
	EvoLangParserEVENTS_DEF               = 2
	EvoLangParserENUM_DEF                 = 3
	EvoLangParserREFERENCES_DEF           = 4
	EvoLangParserLINKED_BY_DEF            = 5
	EvoLangParserBODY_DEF                 = 6
	EvoLangParserAUTHENTICATE_DEF         = 7
	EvoLangParserRETURN_DEF               = 8
	EvoLangParserTYPE_INT_DEF             = 9
	EvoLangParserTYPE_STRING_DEF          = 10
	EvoLangParserTYPE_BOOLEAN_DEF         = 11
	EvoLangParserIF_DEF                   = 12
	EvoLangParserMAIN_DEF                 = 13
	EvoLangParserPRINT_DEF                = 14
	EvoLangParserLISTEN_DEF               = 15
	EvoLangParserQUERY_DEF                = 16
	EvoLangParserRULE_DEF                 = 17
	EvoLangParserMUTATION_DEF             = 18
	EvoLangParserINPUT_DEF                = 19
	EvoLangParserOPERATION_FUNCTION_DEF   = 20
	EvoLangParserOPERATION_MIDDLEWARE_DEF = 21
	EvoLangParserOPERATION_INPUT_DEF      = 22
	EvoLangParserOP_MUL                   = 23
	EvoLangParserOP_DIV                   = 24
	EvoLangParserOP_SUM                   = 25
	EvoLangParserOP_SUB                   = 26
	EvoLangParserOP_GT                    = 27
	EvoLangParserOP_LT                    = 28
	EvoLangParserOP_EQEQ                  = 29
	EvoLangParserOP_NEQ                   = 30
	EvoLangParserOP_GTEQ                  = 31
	EvoLangParserOP_LTEQ                  = 32
	EvoLangParserOP_AND                   = 33
	EvoLangParserOP_OR                    = 34
	EvoLangParserOP_IN                    = 35
	EvoLangParserOP_ASSIGN                = 36
	EvoLangParserDEFINE_DEF               = 37
	EvoLangParserLANG_DEF                 = 38
	EvoLangParserID                       = 39
	EvoLangParserSTRING                   = 40
	EvoLangParserINT                      = 41
	EvoLangParserBOOLEAN                  = 42
	EvoLangParserWS                       = 43
	EvoLangParserCOMMENT                  = 44
	EvoLangParserWHITESPACE               = 45
	EvoLangParserOPEN_BRACKET             = 46
	EvoLangParserCLOSE_BRACKET            = 47
	EvoLangParserOPEN_S_BRACKET           = 48
	EvoLangParserCLOSE_S_BRACKET          = 49
	EvoLangParserOPEN_PAREN               = 50
	EvoLangParserCLOSE_PAREN              = 51
	EvoLangParserCOLON                    = 52
	EvoLangParserHASH                     = 53
	EvoLangParserDOT                      = 54
	EvoLangParserCOMMA                    = 55
	EvoLangParserAT                       = 56
	EvoLangParserPIPE                     = 57
	EvoLangParserOPEN_SANDBOX_MODE        = 58
	EvoLangParserCLOSE_SANDBOX_MODE       = 59
	EvoLangParserSANDBOX                  = 60
	EvoLangParserSANDBOX_CONTENT          = 61
)

// EvoLangParser rules.
const (
	EvoLangParserRULE_prog                    = 0
	EvoLangParserRULE_statement               = 1
	EvoLangParserRULE_modelDef                = 2
	EvoLangParserRULE_modelBody               = 3
	EvoLangParserRULE_modelFieldDef           = 4
	EvoLangParserRULE_ruleDef                 = 5
	EvoLangParserRULE_ruleBody                = 6
	EvoLangParserRULE_ruleStatement           = 7
	EvoLangParserRULE_ruleParameters          = 8
	EvoLangParserRULE_functionBody            = 9
	EvoLangParserRULE_assignmentStatement     = 10
	EvoLangParserRULE_conditionalStatement    = 11
	EvoLangParserRULE_condition               = 12
	EvoLangParserRULE_returnStatement         = 13
	EvoLangParserRULE_ruleConditionExpression = 14
	EvoLangParserRULE_equalityExpression      = 15
	EvoLangParserRULE_inExpression            = 16
	EvoLangParserRULE_ruleExpressionPrimary   = 17
	EvoLangParserRULE_mutationDef             = 18
	EvoLangParserRULE_mutationBody            = 19
	EvoLangParserRULE_mutationStatement       = 20
	EvoLangParserRULE_mutationParameters      = 21
	EvoLangParserRULE_mutationInnerBlock      = 22
	EvoLangParserRULE_middlewareBlock         = 23
	EvoLangParserRULE_functionBlock           = 24
	EvoLangParserRULE_inputDef                = 25
	EvoLangParserRULE_inputBody               = 26
	EvoLangParserRULE_inputFieldDef           = 27
	EvoLangParserRULE_eventDef                = 28
	EvoLangParserRULE_eventChannelHandler     = 29
	EvoLangParserRULE_enumDef                 = 30
	EvoLangParserRULE_references              = 31
	EvoLangParserRULE_linkedBy                = 32
	EvoLangParserRULE_action                  = 33
	EvoLangParserRULE_paramList               = 34
	EvoLangParserRULE_bodyDef                 = 35
	EvoLangParserRULE_authenticateDef         = 36
	EvoLangParserRULE_returnDef               = 37
	EvoLangParserRULE_typeDef                 = 38
	EvoLangParserRULE_arrayDef                = 39
	EvoLangParserRULE_eventType               = 40
	EvoLangParserRULE_expression              = 41
	EvoLangParserRULE_methodCallExpression    = 42
	EvoLangParserRULE_primaryExpression       = 43
	EvoLangParserRULE_propertyAccess          = 44
	EvoLangParserRULE_functionCall            = 45
	EvoLangParserRULE_exprList                = 46
	EvoLangParserRULE_mainFunction            = 47
	EvoLangParserRULE_mainStatements          = 48
	EvoLangParserRULE_mainStatement           = 49
	EvoLangParserRULE_printStatement          = 50
	EvoLangParserRULE_serverStatement         = 51
	EvoLangParserRULE_sandboxBlock            = 52
	EvoLangParserRULE_sandboxAttributes       = 53
	EvoLangParserRULE_sandboxAttribute        = 54
	EvoLangParserRULE_sandboxLangAttribute    = 55
	EvoLangParserRULE_sandboxDefineAttribute  = 56
	EvoLangParserRULE_sandboxDefineContent    = 57
)

// IProgContext is an interface to support dynamic dispatch.
type IProgContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllStatement() []IStatementContext
	Statement(i int) IStatementContext

	// IsProgContext differentiates from other interfaces.
	IsProgContext()
}

type ProgContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgContext() *ProgContext {
	var p = new(ProgContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = EvoLangParserRULE_prog
	return p
}

func InitEmptyProgContext(p *ProgContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = EvoLangParserRULE_prog
}

func (*ProgContext) IsProgContext() {}

func NewProgContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgContext {
	var p = new(ProgContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = EvoLangParserRULE_prog

	return p
}

func (s *ProgContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgContext) EOF() antlr.TerminalNode {
	return s.GetToken(EvoLangParserEOF, 0)
}

func (s *ProgContext) AllStatement() []IStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IStatementContext); ok {
			len++
		}
	}

	tst := make([]IStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IStatementContext); ok {
			tst[i] = t.(IStatementContext)
			i++
		}
	}

	return tst
}

func (s *ProgContext) Statement(i int) IStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStatementContext)
}

func (s *ProgContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(EvoLangParserListener); ok {
		listenerT.EnterProg(s)
	}
}

func (s *ProgContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(EvoLangParserListener); ok {
		listenerT.ExitProg(s)
	}
}

func (s *ProgContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case EvoLangParserVisitor:
		return t.VisitProg(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *EvoLangParser) Prog() (localctx IProgContext) {
	localctx = NewProgContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, EvoLangParserRULE_prog)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(117)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = ((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&925706) != 0) {
		{
			p.SetState(116)
			p.Statement()
		}

		p.SetState(119)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(121)
		p.Match(EvoLangParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IStatementContext is an interface to support dynamic dispatch.
type IStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ModelDef() IModelDefContext
	EnumDef() IEnumDefContext
	RuleDef() IRuleDefContext
	MutationDef() IMutationDefContext
	InputDef() IInputDefContext
	MainFunction() IMainFunctionContext

	// IsStatementContext differentiates from other interfaces.
	IsStatementContext()
}

type StatementContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementContext() *StatementContext {
	var p = new(StatementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = EvoLangParserRULE_statement
	return p
}

func InitEmptyStatementContext(p *StatementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = EvoLangParserRULE_statement
}

func (*StatementContext) IsStatementContext() {}

func NewStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementContext {
	var p = new(StatementContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = EvoLangParserRULE_statement

	return p
}

func (s *StatementContext) GetParser() antlr.Parser { return s.parser }

func (s *StatementContext) ModelDef() IModelDefContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IModelDefContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IModelDefContext)
}

func (s *StatementContext) EnumDef() IEnumDefContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IEnumDefContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IEnumDefContext)
}

func (s *StatementContext) RuleDef() IRuleDefContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRuleDefContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRuleDefContext)
}

func (s *StatementContext) MutationDef() IMutationDefContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMutationDefContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMutationDefContext)
}

func (s *StatementContext) InputDef() IInputDefContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IInputDefContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IInputDefContext)
}

func (s *StatementContext) MainFunction() IMainFunctionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMainFunctionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMainFunctionContext)
}

func (s *StatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(EvoLangParserListener); ok {
		listenerT.EnterStatement(s)
	}
}

func (s *StatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(EvoLangParserListener); ok {
		listenerT.ExitStatement(s)
	}
}

func (s *StatementContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case EvoLangParserVisitor:
		return t.VisitStatement(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *EvoLangParser) Statement() (localctx IStatementContext) {
	localctx = NewStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, EvoLangParserRULE_statement)
	p.SetState(129)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case EvoLangParserMODEL_DEF:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(123)
			p.ModelDef()
		}

	case EvoLangParserENUM_DEF:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(124)
			p.EnumDef()
		}

	case EvoLangParserRULE_DEF:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(125)
			p.RuleDef()
		}

	case EvoLangParserMUTATION_DEF:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(126)
			p.MutationDef()
		}

	case EvoLangParserINPUT_DEF:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(127)
			p.InputDef()
		}

	case EvoLangParserMAIN_DEF:
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(128)
			p.MainFunction()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IModelDefContext is an interface to support dynamic dispatch.
type IModelDefContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	MODEL_DEF() antlr.TerminalNode
	ID() antlr.TerminalNode
	OPEN_BRACKET() antlr.TerminalNode
	ModelBody() IModelBodyContext
	CLOSE_BRACKET() antlr.TerminalNode

	// IsModelDefContext differentiates from other interfaces.
	IsModelDefContext()
}

type ModelDefContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyModelDefContext() *ModelDefContext {
	var p = new(ModelDefContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = EvoLangParserRULE_modelDef
	return p
}

func InitEmptyModelDefContext(p *ModelDefContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = EvoLangParserRULE_modelDef
}

func (*ModelDefContext) IsModelDefContext() {}

func NewModelDefContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ModelDefContext {
	var p = new(ModelDefContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = EvoLangParserRULE_modelDef

	return p
}

func (s *ModelDefContext) GetParser() antlr.Parser { return s.parser }

func (s *ModelDefContext) MODEL_DEF() antlr.TerminalNode {
	return s.GetToken(EvoLangParserMODEL_DEF, 0)
}

func (s *ModelDefContext) ID() antlr.TerminalNode {
	return s.GetToken(EvoLangParserID, 0)
}

func (s *ModelDefContext) OPEN_BRACKET() antlr.TerminalNode {
	return s.GetToken(EvoLangParserOPEN_BRACKET, 0)
}

func (s *ModelDefContext) ModelBody() IModelBodyContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IModelBodyContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IModelBodyContext)
}

func (s *ModelDefContext) CLOSE_BRACKET() antlr.TerminalNode {
	return s.GetToken(EvoLangParserCLOSE_BRACKET, 0)
}

func (s *ModelDefContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ModelDefContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ModelDefContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(EvoLangParserListener); ok {
		listenerT.EnterModelDef(s)
	}
}

func (s *ModelDefContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(EvoLangParserListener); ok {
		listenerT.ExitModelDef(s)
	}
}

func (s *ModelDefContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case EvoLangParserVisitor:
		return t.VisitModelDef(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *EvoLangParser) ModelDef() (localctx IModelDefContext) {
	localctx = NewModelDefContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, EvoLangParserRULE_modelDef)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(131)
		p.Match(EvoLangParserMODEL_DEF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(132)
		p.Match(EvoLangParserID)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(133)
		p.Match(EvoLangParserOPEN_BRACKET)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(134)
		p.ModelBody()
	}
	{
		p.SetState(135)
		p.Match(EvoLangParserCLOSE_BRACKET)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IModelBodyContext is an interface to support dynamic dispatch.
type IModelBodyContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllModelFieldDef() []IModelFieldDefContext
	ModelFieldDef(i int) IModelFieldDefContext
	AllEventDef() []IEventDefContext
	EventDef(i int) IEventDefContext

	// IsModelBodyContext differentiates from other interfaces.
	IsModelBodyContext()
}

type ModelBodyContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyModelBodyContext() *ModelBodyContext {
	var p = new(ModelBodyContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = EvoLangParserRULE_modelBody
	return p
}
